Generify Map. Remove unnecessary stream.